--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -51,7 +51,7 @@
       contours.delete();
       hierarchy.delete();
     }
-    img.src = 'https://github.com/LKNunes/WarFast/blob/main/IMAGE/Mundi.svg'; // Substitua pelo caminho correto para sua imagem
+    img.src = '/IMAGE/Mundi.svg'; // Substitua pelo caminho correto para sua imagem
   </script>
 </body>
 </html>
