--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -15,11 +15,42 @@
       const svgDoc = evt.target.contentDocument;
       const svg = svgDoc.getElementsByTagName('svg')[0];
 
-      // Suponha que você tenha elementos SVG representando territórios com classes específicas, como 'territorio'
-      const territorios = svgDoc.querySelectorAll('.territorio');
-      console.log("Número de territórios identificados:", territorios.length);
-      
-      // Aqui você pode prosseguir com qualquer manipulação ou análise dos elementos SVG identificados
+      // Capturar o tamanho do SVG
+      const width = svg.getAttribute('width');
+      const height = svg.getAttribute('height');
+
+      // Criar um canvas para desenhar o SVG
+      const canvas = document.createElement('canvas');
+      canvas.width = width;
+      canvas.height = height;
+      const ctx = canvas.getContext('2d');
+
+      // Desenhar o SVG no canvas
+      const svgData = new XMLSerializer().serializeToString(svg);
+      const img = new Image();
+      img.onload = function() {
+        ctx.drawImage(img, 0, 0);
+
+        // Obter os pixels do canvas
+        const imageData = ctx.getImageData(0, 0, width, height);
+        const data = imageData.data;
+
+        // Contar os aglomerados de cor preta
+        let territoriosCount = 0;
+        for (let i = 0; i < data.length; i += 4) {
+          // Verificar se o pixel é preto
+          if (data[i] === 0 && data[i + 1] === 0 && data[i + 2] === 0) {
+            territoriosCount++;
+          }
+        }
+
+        // Subtrair um para desconsiderar o fundo branco
+        territoriosCount--;
+
+        // Exibir o número de territórios identificados
+        console.log("Número de territórios identificados:", territoriosCount);
+      };
+      img.src = 'data:image/svg+xml;base64,' + btoa(svgData);
     }
 
     // Associar a função ao evento de carregamento do SVG
