--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -11,46 +11,10 @@
 
   <script>
     // Função para lidar com o carregamento do SVG
-    function onSVGLoaded(evt) {
-      const svgDoc = evt.target.contentDocument;
-      const svg = svgDoc.getElementsByTagName('svg')[0];
-
-      // Capturar o tamanho do SVG
-      const width = svg.getAttribute('width');
-      const height = svg.getAttribute('height');
-
-      // Criar um canvas para desenhar o SVG
-      const canvas = document.createElement('canvas');
-      canvas.width = width;
-      canvas.height = height;
-      const ctx = canvas.getContext('2d');
-
-      // Desenhar o SVG no canvas
-      const svgData = new XMLSerializer().serializeToString(svg);
-      const img = new Image();
-      img.onload = function() {
-        ctx.drawImage(img, 0, 0);
-
-        // Obter os pixels do canvas
-        const imageData = ctx.getImageData(0, 0, width, height);
-        const data = imageData.data;
-
-        // Contar os aglomerados de cor preta
-        let territoriosCount = 0;
-        for (let i = 0; i < data.length; i += 4) {
-          // Verificar se o pixel é preto
-          if (data[i] === 0 && data[i + 1] === 0 && data[i + 2] === 0) {
-            territoriosCount++;
-          }
-        }
-
-        // Subtrair um para desconsiderar o fundo branco
-        territoriosCount--;
-
-        // Exibir o número de territórios identificados
-        console.log("Número de territórios identificados:", territoriosCount);
-      };
-      img.src = 'data:image/svg+xml;base64,' + btoa(svgData);
+    function onSVGLoaded() {
+      const svgDoc = document.getElementById('svgObject').contentDocument;
+      const territorios = svgDoc.querySelectorAll('path[fill="black"]'); // Assumindo que os territórios têm cor preta
+      console.log("Número de territórios identificados:", territorios.length);
     }
 
     // Associar a função ao evento de carregamento do SVG
