--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -3,84 +3,77 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Identificar Territórios</title>
+  <title>Identificar Territórios Pretos</title>
 </head>
 <body>
-  <h1>Identificar Territórios</h1>
+  <h1>Identificar Territórios Pretos</h1>
   <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg"></object>
 
   <script>
-    // Função para lidar com o carregamento do SVG
-    function onSVGLoaded() {
-      const svgDoc = document.getElementById('svgObject').contentDocument;
-      const territorios = svgDoc.querySelectorAll('path[fill="black"]'); // Assumindo que os territórios têm cor preta
-      console.log("Número de territórios identificados:", territorios.length);
-    }
-
+    // Função para identificar territórios pretos no SVG
     function identificarTerritoriosPretos() {
-  const svgDoc = document.getElementById('svgObject').contentDocument;
-  const svgWidth = svgDoc.documentElement.clientWidth;
-  const svgHeight = svgDoc.documentElement.clientHeight;
+      const svgDoc = document.getElementById('svgObject').contentDocument;
+      const svgWidth = svgDoc.documentElement.clientWidth;
+      const svgHeight = svgDoc.documentElement.clientHeight;
 
-  // Criar um canvas temporário para desenhar o SVG
-  const canvas = document.createElement('canvas');
-  canvas.width = svgWidth;
-  canvas.height = svgHeight;
-  const ctx = canvas.getContext('2d');
+      // Criar um canvas temporário para desenhar o SVG
+      const canvas = document.createElement('canvas');
+      canvas.width = svgWidth;
+      canvas.height = svgHeight;
+      const ctx = canvas.getContext('2d');
 
-  // Desenhar o SVG no canvas
-  const svgData = new XMLSerializer().serializeToString(svgDoc);
-  const img = new Image();
-  img.onload = function() {
-    ctx.drawImage(img, 0, 0);
+      // Desenhar o SVG no canvas
+      const svgData = new XMLSerializer().serializeToString(svgDoc);
+      const img = new Image();
+      img.onload = function() {
+        ctx.drawImage(img, 0, 0);
 
-    // Obter os pixels do canvas
-    const imageData = ctx.getImageData(0, 0, svgWidth, svgHeight);
-    const data = imageData.data;
+        // Obter os pixels do canvas
+        const imageData = ctx.getImageData(0, 0, svgWidth, svgHeight);
+        const data = imageData.data;
 
-    // Contar os aglomerados de cor preta
-    let territoriosCount = 0;
-    let visited = new Set();
-    for (let i = 0; i < data.length; i += 4) {
-      const x = (i / 4) % svgWidth;
-      const y = Math.floor((i / 4) / svgWidth);
+        // Contar os aglomerados de cor preta
+        let territoriosCount = 0;
+        let visited = new Set();
+        for (let i = 0; i < data.length; i += 4) {
+          const x = (i / 4) % svgWidth;
+          const y = Math.floor((i / 4) / svgWidth);
 
-      // Verificar se o pixel é preto e não foi visitado
-      if (data[i] === 0 && data[i + 1] === 0 && data[i + 2] === 0 && !visited.has(`${x},${y}`)) {
-        territoriosCount++;
-        floodFill(x, y, svgWidth, svgHeight, data, visited);
-      }
+          // Verificar se o pixel é preto e não foi visitado
+          if (data[i] === 0 && data[i + 1] === 0 && data[i + 2] === 0 && !visited.has(`${x},${y}`)) {
+            territoriosCount++;
+            floodFill(x, y, svgWidth, svgHeight, data, visited);
+            console.log("Pixel preto encontrado em x:", x, "y:", y);
+          }
+        }
+
+        // Exibir o número de territórios identificados
+        console.log("Número de territórios identificados:", territoriosCount);
+      };
+      img.src = 'data:image/svg+xml;base64,' + btoa(svgData);
     }
 
-    // Exibir o número de territórios identificados
-    console.log("Número de territórios identificados:", territoriosCount);
-  };
-  img.src = 'data:image/svg+xml;base64,' + btoa(svgData);
-}
+    // Função para preencher recursivamente os pixels vizinhos
+    function floodFill(x, y, width, height, data, visited) {
+      if (x < 0 || y < 0 || x >= width || y >= height) {
+        return;
+      }
+      const index = (y * width + x) * 4;
+      if (data[index] !== 0 || data[index + 1] !== 0 || data[index + 2] !== 0) {
+        return;
+      }
+      if (visited.has(`${x},${y}`)) {
+        return;
+      }
+      visited.add(`${x},${y}`);
+      floodFill(x + 1, y, width, height, data, visited);
+      floodFill(x - 1, y, width, height, data, visited);
+      floodFill(x, y + 1, width, height, data, visited);
+      floodFill(x, y - 1, width, height, data, visited);
+    }
 
-// Função para preencher recursivamente os pixels vizinhos
-function floodFill(x, y, width, height, data, visited) {
-  if (x < 0 || y < 0 || x >= width || y >= height) {
-    return;
-  }
-  const index = (y * width + x) * 4;
-  if (data[index] !== 0 || data[index + 1] !== 0 || data[index + 2] !== 0) {
-    return;
-  }
-  if (visited.has(`${x},${y}`)) {
-    return;
-  }
-  visited.add(`${x},${y}`);
-  floodFill(x + 1, y, width, height, data, visited);
-  floodFill(x - 1, y, width, height, data, visited);
-  floodFill(x, y + 1, width, height, data, visited);
-  floodFill(x, y - 1, width, height, data, visited);
-}
-
-
-    // Associar a função ao evento de carregamento do SVG
-    document.getElementById('svgObject').addEventListener('load', onSVGLoaded);
+    // Chamar a função para identificar territórios pretos
+    identificarTerritoriosPretos();
   </script>
 </body>
 </html>
- 
