--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -14,7 +14,7 @@
     function identificarTerritorios() {
       const svgDoc = document.getElementById('svgObject').contentDocument;
       const paths = svgDoc.querySelectorAll('path'); // Selecionar todos os elementos <path>
-
+        console.log("teste1")
       // Iterar sobre os elementos <path> e atribuir IDs
       paths.forEach((path, index) => {
         // Gerar um ID único para o território
