--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -19,6 +19,7 @@
       paths.forEach((path, index) => {
         // Gerar um ID único para o território
         const territorioID = `territorio${index + 1}`;
+        console.log("teste2")
 
         // Atribuir o ID ao elemento <path>
         path.setAttribute('id', territorioID);
