--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -6,7 +6,7 @@
   <title>Identificar e Gerar IDs para Territórios</title>
 </head>
 <body>
-  <h1>Identificar e Gerar IDs para Territórios</h1>
+  <h1>Identificar e Gerar IDs para Territórios.....</h1>
   <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg"></object>
 
   <script>
