--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -6,29 +6,35 @@
   <title>Identificar e Gerar IDs para Territórios</title>
 </head>
 <body>
-  <h1>Identificar e Gerar IDs para Territórios.....</h1>
+  <h1>Identificar e Gerar IDs para Territórios</h1>
   <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg"></object>
 
   <script>
     // Função para identificar e gerar IDs para os territórios
     function identificarTerritorios() {
-      const svgDoc = document.getElementById('svgObject').contentDocument;
-      const paths = svgDoc.getElementsByTagName('path'); // Selecionar todos os elementos <path>
+      const svgObject = document.getElementById('svgObject');
 
-      console.log("teste1");
+      // Verificar se o documento SVG foi carregado corretamente
+      if (svgObject.contentDocument && svgObject.contentDocument.documentElement) {
+        const svgDoc = svgObject.contentDocument;
+        const paths = svgDoc.getElementsByTagName('path'); // Selecionar todos os elementos <path>
 
-      // Iterar sobre os elementos <path> e atribuir IDs
-      for (let i = 0; i < paths.length; i++) {
-        // Gerar um ID único para o território
-        console.log("teste2");
+        console.log("teste1");
 
-        const territorioID = `territorio${i + 1}`;
-        
-        // Atribuir o ID ao elemento <path>
-        paths[i].setAttribute('id', territorioID);
+        // Iterar sobre os elementos <path> e atribuir IDs
+        for (let i = 0; i < paths.length; i++) {
+          // Gerar um ID único para o território
+          const territorioID = `territorio${i + 1}`;
+          console.log("teste2");
 
-        // Exibir o ID atribuído para teste
-        console.log(`Território ${i + 1} identificado com ID: ${territorioID}`);
+          // Atribuir o ID ao elemento <path>
+          paths[i].setAttribute('id', territorioID);
+
+          // Exibir o ID atribuído para teste
+          console.log(`Território ${i + 1} identificado com ID: ${territorioID}`);
+        }
+      } else {
+        console.log("O documento SVG não foi carregado corretamente.");
       }
     }
 
