--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Identificar e Gerar IDs para Territórios</title>
+  <title>Identificar e Destacar Territórios</title>
 </head>
 <body>
-  <h1>Identificar e Gerar IDs para Territórios</h1>
+  <h1>Identificar e Destacar Territórios</h1>
   <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg"></object>
 
   <script>
-    // Função para identificar e gerar IDs para os territórios
+    // Função para identificar e destacar territórios
     function identificarTerritorios() {
       const svgObject = document.getElementById('svgObject');
 
@@ -19,21 +19,16 @@
         const svgDoc = svgObject.contentDocument;
         const paths = svgDoc.getElementsByTagName('path'); // Selecionar todos os elementos <path>
 
-        // Iterar sobre os elementos <path> e atribuir IDs
+        // Iterar sobre os elementos <path> e atribuir uma borda vermelha
         for (let i = 0; i < paths.length; i++) {
-          // Gerar um ID único para o território
-          const territorioID = `territorio${i + 1}`;
-
-          // Atribuir o ID ao elemento <path>
-          paths[i].setAttribute('id', territorioID);
-
-          // Exibir o ID atribuído para teste
-          console.log(`Território ${i + 1} identificado com ID: ${territorioID}`);
+          // Adicionar uma borda vermelha
+          paths[i].style.stroke = 'red';
+          paths[i].style.strokeWidth = '2';
         }
       });
     }
 
-    // Chamar a função para identificar e gerar IDs para os territórios
+    // Chamar a função para identificar e destacar territórios
     identificarTerritorios();
   </script>
 </body>
