--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -31,14 +31,16 @@
     identificarTerritorios();
   
     // Função para alterar o tamanho de um território ao passar o mouse sobre ele
+// Função para alterar o tamanho de um território ao passar o mouse sobre ele
 function alterarTamanhoTerritorio(territorio) {
-  territorio.addEventListener('mouseover', function() {
-    this.style.transform = 'scale(1.2)'; // Aumentar o tamanho para 1.2 vezes
+  territorio.addEventListener('mouseenter', function() {
+    this.setAttribute('transform', 'scale(1.2)'); // Aumentar o tamanho para 1.2 vezes
   });
-  territorio.addEventListener('mouseout', function() {
-    this.style.transform = ''; // Restaurar o tamanho original
+  territorio.addEventListener('mouseleave', function() {
+    this.setAttribute('transform', ''); // Restaurar o tamanho original
   });
 }
+
 alterarTamanhoTerritorio(1);
   </script>
 </body>
