--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -41,7 +41,7 @@ function alterarTamanhoTerritorio(territorio) {
   });
 }
 
-alterarTamanhoTerritorio(1);
+alterarTamanhoTerritorio();
   </script>
 </body>
 </html>
