--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -10,27 +10,30 @@
   <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg"></object>
 
   <script>
-    // Função para identificar e destacar territórios
-    function identificarTerritorios() {
-      const svgObject = document.getElementById('svgObject');
+// Função para identificar e destacar territórios
+function identificarTerritorios() {
+  const svgObject = document.getElementById('svgObject');
 
-      // Adicionar um ouvinte de evento para o carregamento do documento SVG
-      svgObject.addEventListener('load', function() {
-        const svgDoc = svgObject.contentDocument;
-        const paths = svgDoc.getElementsByTagName('path'); // Selecionar todos os elementos <path>
+  // Adicionar um ouvinte de evento para o carregamento do documento SVG
+  svgObject.addEventListener('load', function() {
+    const svgDoc = svgObject.contentDocument;
+    const paths = svgDoc.getElementsByTagName('path'); // Selecionar todos os elementos <path>
 
-        // Iterar sobre os elementos <path> e atribuir uma borda vermelha
-        for (let i = 0; i < paths.length; i++) {
-          // Adicionar uma borda vermelha
-          paths[i].style.stroke = 'red';
-          paths[i].style.strokeWidth = '0.5';
-        }
-      });
+    // Iterar sobre os elementos <path> e atribuir uma borda vermelha
+    for (let i = 0; i < paths.length; i++) {
+      // Adicionar uma borda vermelha
+      paths[i].style.stroke = 'red';
+      paths[i].style.strokeWidth = '0.5';
+      
+      // Chamar a função para alterar o tamanho do território ao passar o mouse sobre ele
+      alterarTamanhoTerritorio(paths[i]);
     }
-    // Chamar a função para identificar e destacar territórios
-    identificarTerritorios();
-  
-    // Função para alterar o tamanho de um território ao passar o mouse sobre ele
+  });
+}
+
+// Chamar a função para identificar e destacar territórios
+identificarTerritorios();
+
 // Função para alterar o tamanho de um território ao passar o mouse sobre ele
 function alterarTamanhoTerritorio(territorio) {
   territorio.addEventListener('mouseenter', function() {
@@ -40,8 +43,6 @@ function alterarTamanhoTerritorio(territorio) {
     this.setAttribute('transform', ''); // Restaurar o tamanho original
   });
 }
-
-alterarTamanhoTerritorio();
   </script>
 </body>
 </html>
