--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -37,7 +37,7 @@ identificarTerritorios();
 // Função para alterar o tamanho de um território ao passar o mouse sobre ele
 function alterarTamanhoTerritorio(territorio) {
   territorio.addEventListener('mouseenter', function() {
-    this.setAttribute('transform', 'scale(1.2)'); // Aumentar o tamanho para 1.2 vezes
+    this.setAttribute('transform', 'scale(1.2) translate(-50%, -50%)');
   });
   territorio.addEventListener('mouseleave', function() {
     this.setAttribute('transform', ''); // Restaurar o tamanho original
