--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -37,7 +37,9 @@ identificarTerritorios();
 // Função para alterar o tamanho de um território ao passar o mouse sobre ele
 function alterarTamanhoTerritorio(territorio) {
   territorio.addEventListener('mouseenter', function() {
-    this.setAttribute('transform', 'scale(0) translate(' + (-(territorio.getBBox().width * 0.1)) + ' ' + (-(territorio.getBBox().height * 0.1)) + ')');
+const offsetX = territorio.getBBox().width * 0.1;
+const offsetY = territorio.getBBox().height * 0.1;
+this.setAttribute('transform', 'scale(1.2) translate(' + (-offsetX) + ' ' + (-offsetY) + ')');
   });
   territorio.addEventListener('mouseleave', function() {
     this.setAttribute('transform', ''); // Restaurar o tamanho original
