--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -37,9 +37,8 @@ identificarTerritorios();
 // Função para alterar o tamanho de um território ao passar o mouse sobre ele
 function alterarTamanhoTerritorio(territorio) {
   territorio.addEventListener('mouseenter', function() {
-const offsetX = territorio.getBBox().width * 0.1;
-const offsetY = territorio.getBBox().height * 0.1;
-this.setAttribute('transform', 'scale(1.2) translate(' + (-offsetX) + ' ' + (-offsetY) + ')');
+
+territorio.setAttribute('transform', 'scale(1.2) translate(-50%, -50%)');
   });
   territorio.addEventListener('mouseleave', function() {
     this.setAttribute('transform', ''); // Restaurar o tamanho original
