--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -38,7 +38,12 @@ identificarTerritorios();
 function alterarTamanhoTerritorio(territorio) {
   territorio.addEventListener('mouseenter', function() {
 
-    territorio.setAttribute('transform', 'scale(1.2) translate(' + (-territorio.getBBox().x + territorio.getBBox().width / 2) + ' ' + (-territorio.getBBox().y + territorio.getBBox().height / 2) + ')');
+    const centroX = territorio.getBBox().x + territorio.getBBox().width / 2;
+const centroY = territorio.getBBox().y + territorio.getBBox().height / 2;
+const deslocamentoX = centroX - centroX * 1.2;
+const deslocamentoY = centroY - centroY * 1.2;
+
+territorio.setAttribute('transform', 'scale(1.2) translate(' + deslocamentoX + ' ' + deslocamentoY + ')');
   });
   territorio.addEventListener('mouseleave', function() {
     this.setAttribute('transform', ''); // Restaurar o tamanho original
