--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -35,7 +35,7 @@ function identificarTerritorios() {
     // Iterar sobre os elementos <path> e atribuir uma borda vermelha
     for (let i = 0; i < paths.length; i++) {
       // Adicionar uma borda vermelha
-      paths[i].style.stroke = 'red';
+      paths[i].style.stroke = 'white';
       paths[i].style.strokeWidth = '0.5';
       
       // Chamar a função para alterar o tamanho do território ao passar o mouse sobre ele
