--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -11,7 +11,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: blue;
+      background-color: rgb(60, 60, 255);
     }
 
     #svgObject {
