--- a/Partida/partida-joao.html
+++ b/Partida/partida-joao.html
@@ -56,6 +56,7 @@ function alterarTamanhoTerritorio(territorio) {
     const centroY = territorio.getBBox().y + territorio.getBBox().height ;
     const deslocamentoX = centroX - centroX * 1.05;
     const deslocamentoY = centroY - centroY * 1.05;
+    console.log (territorio);
 
 territorio.setAttribute('transform', 'scale(1.05) translate(' + deslocamentoX + ' ' + deslocamentoY + ')');
   });
